dernières corrections + readme

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/RykesZ/projet_7-backend.git"
   },
-  "author": "",
+  "author": "Rémi SIMON <remi.simon.work@gmail.com> (https://github.com/RykesZ)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/RykesZ/projet_7-backend/issues"
